--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -18,9 +18,19 @@
     "### Import numpy"
    ]
   },
-  {
+    {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "ffe0e40f-e3d6-47cb-b7cc-7e3cd2494408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda install numpy -y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "a42d0c64-395a-4243-a1a7-91391d2d80a5",
    "metadata": {},
    "outputs": [],
