--- a/numpy_tutorial.ipynb
+++ b/numpy_tutorial.ipynb
@@ -12,20 +12,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5acf7ef5-9662-412d-bfec-c30329c754a0",
+   "id": "f91edf72-540e-4b05-8d10-be3ac4c2150b",
    "metadata": {},
    "source": [
-    "### Import numpy"
+    "### Install numpy"
    ]
   },
-    {
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ffe0e40f-e3d6-47cb-b7cc-7e3cd2494408",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install numpy -y"
+    "%%capture\n",
+    "!python -m pip install --upgrade numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5acf7ef5-9662-412d-bfec-c30329c754a0",
+   "metadata": {},
+   "source": [
+    "### Import numpy"
    ]
   },
   {
